Add Railway.app deployment config
- Railway Spring profile with PostgreSQL + Redis
- PostgreSQL driver dependency
- Procfile for Railway backend service
- Frontend Express server with API proxy for Railway
- Configurable CORS origins via app.cors.allowed-origins
- railway.json for both backend and frontend builds